--- a/dermit/src/index.css
+++ b/dermit/src/index.css
@@ -8,3 +8,9 @@ body {
   box-sizing: border-box;
   overflow-x: hidden;
 }
+
+@layer components{
+  .dragClass{
+    @apply bg-emerald-600/10 *:opacity-60
+}
+}
